--- a/User It Helpdesk/knowledge-base.html
+++ b/User It Helpdesk/knowledge-base.html
@@ -54,14 +54,18 @@
                 <h3>Software dan Hardware</h3>
                 <p>Perangkat yang diinstall</p>
               </div>
-              <a href="view-detail.html" class="view-detail-btn">VIEW DETAIL</a>
+              <a href="article-detail.html" class="view-detail-btn"
+                >VIEW DETAIL</a
+              >
             </div>
             <div class="kb-article">
               <div class="kb-article-info">
                 <h3>Cara mengenal Lebih Dalam Terkait IT - HelpDesk</h3>
                 <p>Cara membuat Problem Ticket.dll</p>
               </div>
-              <a href="view-detail.html" class="view-detail-btn">VIEW DETAIL</a>
+              <a href="article-detail.html" class="view-detail-btn"
+                >VIEW DETAIL</a
+              >
             </div>
           </div>
         </div>
@@ -76,7 +80,9 @@
                 <h3>Cara Install Microsoft Office</h3>
                 <p>Panduan lengkap instalasi Microsoft Office untuk karyawan</p>
               </div>
-              <a href="view-detail.html" class="view-detail-btn">VIEW DETAIL</a>
+              <a href="article-detail.html" class="view-detail-btn"
+                >VIEW DETAIL</a
+              >
             </div>
             <div class="kb-article">
               <div class="kb-article-info">
@@ -85,21 +91,27 @@
                   Langkah-langkah mengakses jaringan perusahaan dari jarak jauh
                 </p>
               </div>
-              <a href="view-detail.html" class="view-detail-btn">VIEW DETAIL</a>
+              <a href="article-detail.html" class="view-detail-btn"
+                >VIEW DETAIL</a
+              >
             </div>
             <div class="kb-article">
               <div class="kb-article-info">
                 <h3>Mengatasi Error pada Aplikasi Internal</h3>
                 <p>Solusi untuk masalah umum pada software perusahaan</p>
               </div>
-              <a href="view-detail.html" class="view-detail-btn">VIEW DETAIL</a>
+              <a href="article-detail.html" class="view-detail-btn"
+                >VIEW DETAIL</a
+              >
             </div>
             <div class="kb-article">
               <div class="kb-article-info">
                 <h3>Update Software Wajib</h3>
                 <p>Daftar software yang perlu diupdate secara berkala</p>
               </div>
-              <a href="view-detail.html" class="view-detail-btn">VIEW DETAIL</a>
+              <a href="article-detail.html" class="view-detail-btn"
+                >VIEW DETAIL</a
+              >
             </div>
           </div>
         </div>
@@ -112,7 +124,9 @@
                 <h3>Menghubungkan Perangkat ke Jaringan WiFi</h3>
                 <p>Cara menghubungkan laptop, smartphone, dan perangkat lain</p>
               </div>
-              <a href="view-detail.html" class="view-detail-btn">VIEW DETAIL</a>
+              <a href="article-detail.html" class="view-detail-btn"
+                >VIEW DETAIL</a
+              >
             </div>
             <div class="kb-article">
               <div class="kb-article-info">
@@ -121,21 +135,27 @@
                   Cara menggunakan printer kantor dan mengatasi masalah umum
                 </p>
               </div>
-              <a href="view-detail.html" class="view-detail-btn">VIEW DETAIL</a>
+              <a href="article-detail.html" class="view-detail-btn"
+                >VIEW DETAIL</a
+              >
             </div>
             <div class="kb-article">
               <div class="kb-article-info">
                 <h3>Pengaturan Proyektor Ruang Meeting</h3>
                 <p>Langkah-langkah menggunakan proyektor di ruang rapat</p>
               </div>
-              <a href="view-detail.html" class="view-detail-btn">VIEW DETAIL</a>
+              <a href="article-detail.html" class="view-detail-btn"
+                >VIEW DETAIL</a
+              >
             </div>
             <div class="kb-article">
               <div class="kb-article-info">
                 <h3>Perawatan Laptop Perusahaan</h3>
                 <p>Tips merawat perangkat kerja agar tetap optimal</p>
               </div>
-              <a href="view-detail.html" class="view-detail-btn">VIEW DETAIL</a>
+              <a href="article-detail.html" class="view-detail-btn"
+                >VIEW DETAIL</a
+              >
             </div>
           </div>
         </div>
@@ -152,7 +172,7 @@
       "
     >
       <p class="mb-0" style="color: #666">
-        © 2023 Trans 7. All Rights Reserved.
+        © 2025 Trans 7. All Rights Reserved.
       </p>
     </div>
 
