--- a/User It Helpdesk/new-problem.html
+++ b/User It Helpdesk/new-problem.html
@@ -450,7 +450,7 @@
                 src="person1.png"
                 alt="IT Support Slide"
                 class="img-fluid shadow-sm"
-                style="border-radius: 10px"
+                style="border-radius: 10px; transform: rotate(90deg)"
               />
             </div>
           </div>
