--- a/Admin It Helpdesk/admin-category-ticket.html
+++ b/Admin It Helpdesk/admin-category-ticket.html
@@ -27,6 +27,30 @@
         color: white;
         padding: 80px 20px;
         margin-bottom: 30px;
+        position: relative;
+      }
+
+      .banner::before {
+        content: "";
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background: linear-gradient(
+          to bottom,
+          rgba(0, 0, 0, 0) 0%,
+          rgba(0, 0, 0, 0.1) 30%,
+          rgba(0, 0, 0, 0.5) 70%,
+          rgba(0, 0, 0, 0.7) 100%
+        );
+        z-index: 1;
+      }
+
+      .banner h1,
+      .banner p {
+        position: relative;
+        z-index: 2;
       }
 
       .banner h1 {
