--- a/Admin It Helpdesk/components.html
+++ b/Admin It Helpdesk/components.html
@@ -130,7 +130,7 @@
     <div class="todays-pic mt-4 mx-3">
       <h6>Today's PIC</h6>
       <div class="pic-avatar">
-        <i class="fas fa-user fa-4x text-secondary"></i>
+        <i class="fas fa-user fa-4x text-white"></i>
       </div>
       <div class="text-center mb-2">
         <div>IT Support</div>
