--- a/Admin It Helpdesk/Home.html
+++ b/Admin It Helpdesk/Home.html
@@ -320,8 +320,13 @@
             </div>
           </div>
           <div class="pagination">
-            <a href="#">first</a> | <a href="#">prev</a> |
-            <a href="#">next</a> | <a href="#">last</a>
+            <a href="#" class="pagination-btn">&lt;</a>
+            <a href="#" class="pagination-number active">1</a>
+            <a href="#" class="pagination-number">2</a>
+            <a href="#" class="pagination-number">3</a>
+            <span class="pagination-dots">...</span>
+            <a href="#" class="pagination-number">12</a>
+            <a href="#" class="pagination-btn">&gt;</a>
           </div>
         </div>
 
@@ -611,6 +616,19 @@
                 </div>
               </div>
             </div>
+          </div>
+        </div>
+
+        <!-- Bottom Pagination -->
+        <div class="d-flex justify-content-end align-items-center mt-4">
+          <div class="pagination">
+            <a href="#" class="pagination-btn">&lt;</a>
+            <a href="#" class="pagination-number active">1</a>
+            <a href="#" class="pagination-number">2</a>
+            <a href="#" class="pagination-number">3</a>
+            <span class="pagination-dots">...</span>
+            <a href="#" class="pagination-number">12</a>
+            <a href="#" class="pagination-btn">&gt;</a>
           </div>
         </div>
       </div>
