Update profile image in new-problem.html to enhance visual consistency and improve user experience.

--- a/User It Helpdesk/new-problem.html
+++ b/User It Helpdesk/new-problem.html
@@ -447,10 +447,10 @@
               style="padding: 10px; margin-bottom: 20px"
             >
               <img
-                src="person1.png"
+                src="person2.png"
                 alt="IT Support Slide"
                 class="img-fluid shadow-sm"
-                style="border-radius: 10px; transform: rotate(90deg)"
+                style="border-radius: 10px"
               />
             </div>
           </div>
