Add copyright container and update jQuery source across multiple HTML files for improved consistency. Enhance footer styles in styles.css for better visibility and maintainability.

--- a/Admin It Helpdesk/Home.html
+++ b/Admin It Helpdesk/Home.html
@@ -260,7 +260,7 @@
             <div class="icon solved-tickets">
               <i class="fas fa-check"></i>
             </div>
-            <div class="number">10.555</div>
+            <div class="number">10.092</div>
             <div class="description">Solved Ticket(s)</div>
             <div class="sub-description">
               <i class="fas fa-chart-line me-1 text-success"></i>
@@ -638,6 +638,9 @@
     <a href="#" class="whatsapp-btn" title="Contact us on WhatsApp">
       <i class="fab fa-whatsapp"></i>
     </a>
+
+    <!-- Copyright Container -->
+    <div id="copyright-container"></div>
 
     <!-- Scripts -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
