--- a/Admin It Helpdesk/all-statistics.html
+++ b/Admin It Helpdesk/all-statistics.html
@@ -739,5 +739,13 @@
         });
       });
     </script>
+
+    <!-- WhatsApp Button -->
+    <a href="#" class="whatsapp-btn" title="Contact us on WhatsApp">
+      <i class="fab fa-whatsapp"></i>
+    </a>
+
+    <!-- Copyright Container -->
+    <div id="copyright-container"></div>
   </body>
 </html>
