--- a/Admin It Helpdesk/components.html
+++ b/Admin It Helpdesk/components.html
@@ -318,3 +318,12 @@
     });
   });
 </script>
+
+<!-- Copyright Component -->
+<div id="copyright-component">
+  <div class="copyright-container">
+    <div class="copyright-text">
+      <p>© 2024 IT-HelpDesk. All rights reserved.</p>
+    </div>
+  </div>
+</div>
