--- a/Admin It Helpdesk/index.html
+++ b/Admin It Helpdesk/index.html
@@ -2,13 +2,19 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Redirecting...</title>
-  </head>
-  <body>
+    <title>IT-HelpDesk - Admin</title>
     <script>
       window.location.href = "Home.html";
     </script>
+  </head>
+  <body>
+    <p>Redirecting to Home Page...</p>
+    
+    <!-- Copyright Container -->
+    <div id="copyright-container"></div>
+    
+    <!-- Load copyright -->
+    <script src="utils.js"></script>
   </body>
 </html>
