--- a/Admin It Helpdesk/addKnowledgeBase.html
+++ b/Admin It Helpdesk/addKnowledgeBase.html
@@ -134,8 +134,11 @@
       <i class="fab fa-whatsapp"></i>
     </a>
 
+    <!-- Copyright Container -->
+    <div id="copyright-container"></div>
+
     <!-- Scripts -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/summernote@0.8.18/dist/summernote-bs4.min.js"></script>
