--- a/Admin It Helpdesk/myTicket(s).html
+++ b/Admin It Helpdesk/myTicket(s).html
@@ -525,6 +525,9 @@
       <i class="fab fa-whatsapp"></i>
     </a>
 
+    <!-- Copyright Container -->
+    <div id="copyright-container"></div>
+
     <!-- Scripts -->
     <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
