--- a/Admin It Helpdesk/statistics-staff.html
+++ b/Admin It Helpdesk/statistics-staff.html
@@ -203,9 +203,13 @@
       <i class="fab fa-whatsapp"></i>
     </a>
 
+    <!-- Copyright Container -->
+    <div id="copyright-container"></div>
+
     <!-- Scripts -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="utils.js"></script>
     <script>
       document.addEventListener("DOMContentLoaded", function () {
