--- a/User It Helpdesk/new-problem.html
+++ b/User It Helpdesk/new-problem.html
@@ -409,7 +409,7 @@
             <!-- Video Tutorial Section -->
             <div class="bg-white p-3 rounded shadow-sm mb-4">
               <h5 class="text-primary mb-3">
-                <i class="fas fa-video me-2"></i> Tutorial Video
+                <i class="fas fa-video me-2"></i> Panduan membuat problem ticket 
               </h5>
               <div class="new-problem-video">
                 <div class="play-overlay">
@@ -422,7 +422,7 @@
                 </div>
               </div>
               <p class="mt-2 mb-0 small text-muted">
-                Click to learn how to submit a ticket
+                Sebelum membuat problem ticket, Silahkan menonton video tutorial terlebih dahulu.
               </p>
             </div>
 
