Enhance sidebar functionality and styling in Admin It Helpdesk. Updated dropdown menus in components.html for better user interaction, added responsive styles in styles.css, and improved JavaScript initialization for sidebar dropdowns in utils.js. Adjusted layout and padding for improved visual consistency across the application.

--- a/Admin It Helpdesk/Home.html
+++ b/Admin It Helpdesk/Home.html
@@ -156,6 +156,14 @@
       .filter-modal.active {
         display: block;
       }
+
+      .sidebar .submenu-sidebar,
+      .sidebar .dropdown-submenu .sub-submenu {
+        min-width: 210px;
+        width: 100%;
+        max-width: 260px;
+        box-sizing: border-box;
+      }
     </style>
   </head>
   <body>
