--- a/Admin It Helpdesk/components.html
+++ b/Admin It Helpdesk/components.html
@@ -42,7 +42,10 @@
             </a>
           </li>
           <li class="dropdown-submenu">
-            <a href="#"> <i class="fas fa-tags"></i> Category </a>
+            <a href="#">
+              <i class="fas fa-tags"></i> Category
+              <i class="fas fa-angle-right submenu-arrow"></i
+            ></a>
             <ul class="sub-submenu" id="categorySubmenu">
               <li>
                 <a href="admin-category-article.html">
@@ -57,7 +60,10 @@
             </ul>
           </li>
           <li class="dropdown-submenu">
-            <a href="#"> <i class="fas fa-ticket-alt"></i> Ticket </a>
+            <a href="#">
+              <i class="fas fa-ticket-alt"></i> Ticket
+              <i class="fas fa-angle-right submenu-arrow"></i
+            ></a>
             <ul class="sub-submenu" id="ticketSubmenu">
               <li>
                 <a href="newProblemTicket.html">
@@ -93,7 +99,10 @@
             </a>
           </li>
           <li class="dropdown-submenu">
-            <a href="#"> <i class="fas fa-filter"></i> Details By </a>
+            <a href="#">
+              <i class="fas fa-filter"></i> Details By
+              <i class="fas fa-angle-right submenu-arrow"></i
+            ></a>
             <ul class="sub-submenu" id="detailsSubmenu">
               <li>
                 <a href="statistics-year.html">
