--- a/Admin It Helpdesk/components.html
+++ b/Admin It Helpdesk/components.html
@@ -44,7 +44,7 @@
           <li class="dropdown-submenu">
             <a href="#">
               <i class="fas fa-tags"></i> Category
-              <i class="fas fa-angle-right submenu-arrow"></i
+              <i class="fas fa-angle-down submenu-arrow"></i
             ></a>
             <ul class="sub-submenu" id="categorySubmenu">
               <li>
@@ -62,7 +62,7 @@
           <li class="dropdown-submenu">
             <a href="#">
               <i class="fas fa-ticket-alt"></i> Ticket
-              <i class="fas fa-angle-right submenu-arrow"></i
+              <i class="fas fa-angle-down submenu-arrow"></i
             ></a>
             <ul class="sub-submenu" id="ticketSubmenu">
               <li>
@@ -101,7 +101,7 @@
           <li class="dropdown-submenu">
             <a href="#">
               <i class="fas fa-filter"></i> Details By
-              <i class="fas fa-angle-right submenu-arrow"></i
+              <i class="fas fa-angle-down submenu-arrow"></i
             ></a>
             <ul class="sub-submenu" id="detailsSubmenu">
               <li>
