Add notification icon to user profile in Admin and User Helpdesk components. Adjusted gap in user profile layout for improved spacing. Enhanced notification icon styles for better interactivity.

--- a/Admin It Helpdesk/components.html
+++ b/Admin It Helpdesk/components.html
@@ -4,6 +4,9 @@
     <h1>IT-HelpDesk</h1>
     <div class="user-profile">
       <span>JOHN NEWMAN</span>
+      <div class="notification-icon">
+        <i class="fas fa-bell"></i>
+      </div>
       <button class="logout-btn">
         <i class="fas fa-sign-out-alt me-1"></i>Logout
       </button>
