--- a/User It Helpdesk/components-user.html
+++ b/User It Helpdesk/components-user.html
@@ -18,6 +18,9 @@
     </div>
     <div class="user-info">
       <span class="user-name">JOHN DOE</span>
+      <div class="notification-icon">
+        <i class="fas fa-bell"></i>
+      </div>
       <button class="logout-btn">
         <i class="fas fa-sign-out-alt me-1"></i>Logout
       </button>
