Enhance notification icon functionality in Admin and User Helpdesk components by adding a notification badge. Update styles for improved interactivity and visual feedback. Add copyright footer to article detail page for better branding.

--- a/Admin It Helpdesk/components.html
+++ b/Admin It Helpdesk/components.html
@@ -4,7 +4,7 @@
     <h1>IT-HelpDesk</h1>
     <div class="user-profile">
       <span>JOHN NEWMAN</span>
-      <div class="notification-icon">
+      <div class="notification-icon has-notification">
         <i class="fas fa-bell"></i>
       </div>
       <button class="logout-btn">
