--- a/User It Helpdesk/article-detail.html
+++ b/User It Helpdesk/article-detail.html
@@ -318,6 +318,20 @@
     <!-- WhatsApp Button -->
     <div id="whatsapp-container"></div>
 
+    <!-- Copyright Footer -->
+    <div
+      class="text-center py-3"
+      style="
+        background-color: #f8f9fa;
+        border-top: 1px solid #e1e1e1;
+        margin-top: 30px;
+      "
+    >
+      <p class="mb-0" style="color: #666">
+        © 2025 Trans 7. All Rights Reserved.
+      </p>
+    </div>
+
     <!-- Bootstrap and jQuery -->
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
